# zed_open_capture_ros

./: CMakeLists.txt  README.md  get_camera_param.py  package.xml
config/: stereo_imu.rviz
src/: stereo_imu_node.cpp  stereo_node.cpp
