<?xml version="1.0"?>
<package format="2">
  <name>zed_open_capture_ros</name>
  <version>0.1.0</version>
  <description>ROS package to publish stereo camera and IMU data using ZED SDK</description>

  <maintainer email="jyubt@connect.ust.hk">Jingwen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <!-- <depend>zed_open_capture</depend> -->

  <!-- System dependencies -->
  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <!-- Export -->
  <export></export>
</package>
